--- a/public/404/index.html
+++ b/public/404/index.html
@@ -8,6 +8,7 @@
 
 	<title>Error: 404</title>
 
+	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="/404/style.css" />
 
 </head>
